welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:20: error: not found: value T
		setCouleurBrosse(T(k));baisseBrosse();leveBrosse();avance()
                                 ^